<resources>
    <string name="app_name">luckybuyer</string>
    <string name="auth0_client_id">6frbTA5t3o1djsPYLp0jPiDGx7cvIyVc</string>
    <string name="auth0_domain">luckybuyer.auth0.com</string>
    <string name="auth0_client_id_text">HmF3R6dz0qbzGQoYtTuorgSmzgu6Aua1</string>
    <string name="auth0_domain_text">staging-luckybuyer.auth0.com</string>
    <string name="app_id">255982704775897</string>
    <string name="email"><u>contact@LuckyBuyer.net</u></string>
    <string name="facebook_app_id">255982704775897</string>
    <string name="channel">Free_Game</string>
    <string name="LuckyBuyer">LuckyBuyer</string>
    <string name="Home">Home</string>
    <string name="PRODUCTS">PRODUCTS</string>
    <string name="BuyCoins">Top Up</string>
    <string name="NewResult">Results</string>
    <string name="MyAccount">Me</string>
    <string name="Show">Share</string>
    <string name="TenStart">Starting at $10</string>
    <string name="FiveStart">Starting at $5</string>
    <string name="Claimed.">Completed:&#160;</string>
    <string name="Issue.">Round:&#160;</string>
    <string name="Total.">Total:&#160;</string>
    <string name="Remaining.">Remaining:&#160;</string>
    <string name="Countdownannounced.">Countdown:&#160;</string>
    <string name="Inprogress">In progress</string>
    <string name="Announced">Closed</string>
    <string name="PreviousWinners">Previous Winners</string>
    <string name="ParticipationRecord">All purchase</string>
    <string name="GetItNow">Get It Now</string>
    <string name="Play1coin">Play 1 coin, get 1 chance! Now with free shipping！</string>
    <string name="FiveTimes">Quantity of purchased items must be multiples of&#160;</string>
    <string name="TenTimes">Quantity of purchased items must be multiples of&#160;</string>
    <string name="allremain">All Remained</string>
    <string name="selectquantity">Please select the quantity</string>
    <string name="Participationsuccess">Participation success</string>
    <string name="Participationsuccesstext">You will be notified by email if you are the winner</string>
    <string name="Insufficientfunds">Insufficient funds</string>
    <string name="Insufficientfundstext">No enough coins, please topup firstly.</string>
    <string name="Itemexpired">Current Round Finished</string>
    <string name="Itemexpiredtext">The current round is finished, please select another round.</string>
    <string name="Participationfailed">Participation failed</string>
    <string name="Participationfailedtext">Insufficient number of shares, plaese select it again.</string>
    <string name="Done">Done</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Thelatestissue">Wanna try another round?</string>
    <string name="InsertCoins">Get it now</string>
    <string name="Winner">Winner</string>
    <string name="Winner.">Winner:&#160;</string>
    <string name="Luckynumber.">Lucky Number:&#160;</string>
    <string name="Lotterytime.">Due date:&#160;</string>
    <string name="Numberofparticipants.">Total Participation:&#160;</string>
    <string name="Participationdetails">Participation Details</string>
    <string name="Myparticipat.">Total Participation:&#160;</string>
    <string name="viewall">View all</string>
    <string name="Details">Details</string>
    <string name="Time">Date</string>
    <string name="People">Total Coins</string>
    <string name="Participationnumbers">Ticket Numbers</string>
    <string name="Participationnumbers.">My Ticket Number:&#160;</string>
    <string name="facebooklike">Click \"like\" on our Facebook page and you\'ll see a notification when you win items.</string>
    <string name="All">All</string>
    <string name="LuckyRecords">Prizes</string>
    <string name="Participantagain">Participant Again</string>
    <string name="Continue">Continue</string>
    <string name="confirmaddress">Please confirm your shipping address</string>
    <string name="confirmshippingaddress">Confirm shipping address</string>
    <string name="Waitingforshippment">Waiting for shippment</string>
    <string name="Confirmdelivery">Confirm Delivery</string>
    <string name="Delivered">Completed</string>
    <string name="Confirm">Confirm</string>
    <string name="Itemsconfirm">Delivery Confirmation</string>
    <string name="Ordertracking">Order Tracking</string>
    <string name="youwonthisproduct">Congratulations! You win!</string>
    <string name="Chooseaddress">Choose a shipping address</string>
    <string name="Alternativeaddress"> Change address</string>
    <string name="Currentaddress">Use this address</string>
    <string name="NewAddress">New Address</string>
    <string name="Myshippingaddress">My shipping address</string>
    <string name="Deleteaddress">Do you want to delete this address?</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="selectcountry">Please select country</string>
    <string name="Entercountry">Please enter country</string>
    <string name="Selectcity">Select city</string>
    <string name="Entercity">Enter city</string>
    <string name="Country">Country</string>
    <string name="City">City</string>
    <string name="Area">Area</string>
    <string name="Street">Street</string>
    <string name="Building">Building</string>
    <string name="Mobilenumber">Mobile number</string>
    <string name="ShippingNote">Shipping Note</string>
    <string name="Enterarea">Enter area</string>
    <string name="Enterstreet">Enter street</string>
    <string name="EnterBuilding">Enter Building Name/No.</string>
    <string name="EnterMobile">Enter Mobile number</string>
    <string name="Save">Save</string>
    <string name="addresswarn">Once the receipient address is confirmed the product will be shipped. The address can not be changed after that.</string>
    <string name="Settings">Settings</string>
    <string name="Contactus">Contact us</string>
    <string name="Logout">Log out</string>
    <string name="Promotions">Promotions</string>
    <string name="CoinsBalance">Coins Balance</string>
    <string name="Selectamount">Select the Amount</string>
    <string name="Choosepayment">Choose payment method</string>
    <string name="PaymentMethod">Choose Payment Method</string>
    <string name="money100to115">Wow, special offer today only! 115 coins only $100！</string>
    <string name="contactemail">If you have any question you can contact us at </string>
    <string name="Success">Success</string>
    <string name="Successtext">Your payment is being processing and you will be notified once it succeeds</string>
    <string name="Buyfailed">Buy failed</string>
    <string name="Buyfailedtext">You may try again.</string>
    <string name="CoinsDetails">Details</string>
    <string name="charge">Charge</string>
    <string name="Recharge">Top Up</string>
    <string name="Nodata">No records</string>
    <string name="Networkfailure">Network connection failed!</string>
    <string name="coins">coins</string>
    <string name="coins.">coins:&#160;</string>
    <string name="selected">selected</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Editaddress">Edit Address</string>
    <string name="Addaddress">Add Address</string>
    <string name="loading...">loading...</string>
    <string name="nomoredata">No records</string>
    <string name="Alreadyfullyloaded">All records have been loaded</string>
    <string name="Importantinformation">Important information</string>
    <string name="USD">USD</string>
    <string name="deletesuccess">Deleted Successfully</string>
    <string name="setsuccess">Successfully set address</string>
    <string name="retry">Retry</string>
    <string name="CashU">CashU</string>
    <string name="Shown">Shared</string>
    <string name="Changecountry">Change country</string>
    <string name="CheckForUpdates">Check for updates</string>
    <string name="Canada">Canada</string>
    <string name="Unitedarabemirates">United Arab Emirates</string>
    <string name="Oman">Oman</string>
    <string name="Qatar">Qatar</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Bahrain">Bahrain</string>
    <string name="SaudiArabia">Saudi Arabia</string>
    <string name="Egypt">Egypt</string>
    <string name="selectSever">Please wait, the store information is loading…</string>
    <string name="forceUpdate">An updated version is detected, please update your application. </string>
    <string name="ordinaryUpdate">A newer version of Lucky Buyer is available.Would you like to upgrade?</string>
    <string name="Update">Update</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Sending">Sending...</string>
    <string name="shoSuccess">Shared Success&#160;</string>
    <string name="showSuccessDiscribe">&#160;gold has been credited into your account.</string>
    <string name="LuckyNumber.">Lucky Number:&#160;</string>
    <string name="welcomediscribe">Quantity of purchased items must be a multiple of 5</string>
    <string name="Fold">Fold</string>
    <string name="unFold">Unfold</string>
    <string name="SelectCountry">Select Country</string>
    <string name="Apply">Apply</string>
    <string name="showitstart">Share it, you will get</string>
    <string name="showitlast"> coins rewarding!</string>
    <string name="EditShowPager">Edit Share Page</string>
    <string name="Send">Send</string>
    <string name="Help">Help</string>
    <string name="WhatCoins">What’s the Coins?</string>
    <string name="CoinsExplanMYR">Coins are the virtual currency of LuckyBuyer. You can get coins when you top-up your account or unwrap the gift package. 1coin is equivalent to 1 MYR.</string>
    <string name="CoinsExplanUSD">Coins are the virtual currency of LuckyBuyer. You can get coins when you top-up your account or unwrap the gift package. 1coin is equivalent to 1 USD.</string>
    <string name="ParticipationDetails">Participation Details</string>
    <string name="Sharerewards">Share it, get rewards!</string>
    <string name="CountryLanguage">Country &amp; Language</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="ordernumber.">Order Number:&#160;</string>
    <string name="ID.">ID:&#160;</string>
    <string name="phonenum.">Phone Number:&#160;</string>
    <string name="operator.">Operator:&#160;</string>
    <string name="OtherPayments">Other Payments</string>
    <string name="EditShowHint">Share your award-winning speech</string>
    <string name="Camera">Camera</string>
    <string name="Photos">Photos</string>
    <string name="Shared">Shared</string>
    <string name="OneStorestart">Accounts are store specific. You may need a new account for</string>
    <string name="OneStoreend">. Proceed?</string>
    <string name="editshowrequred">This field is required</string>
    <string name="editshowone">Upload at least one image</string>
    <string name="goshare">Share your prize</string>
    <string name="editphoneoperator">Please complete information</string>
    <string name="Submit">Submit</string>
    <string name="WaitingforProcessing">Waiting for Processing</string>
    <string name="language">language</string>
    <string name="Language">Language</string>
    <string name="MyParticipations">My Participations:&#160;</string>
    <string name="loginsuccess">Logged in successfully</string>
    <string name="loginfailed">Logged in failed</string>
    <string name="Clickexit">Click again to exit</string>
    <string name="completeinformation">Please complete information</string>
    <string name="numbernullwarn">Phone number is required</string>
    <string name="operatornummwarn">Operator is required</string>
    <string name="defaultaddress">Default Address</string>
    <string name="ZipCode">Postcode</string>
    <string name="News">Message</string>
</resources>