<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_insertcoins_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Participationsuccess"
        android:textColor="@color/text_black"
        android:layout_marginTop="@dimen/dimen_40"
        android:textSize="@dimen/dimen_36" />

    <net.iwantbuyer.view.JustifyTextView
        android:visibility="gone"
        android:id="@+id/jtv_insertcoins_discribe"
        android:layout_marginStart="@dimen/dimen_44"
        android:layout_marginEnd="@dimen/dimen_44"
        android:layout_marginTop="@dimen/dimen_30"
      android:text="@string/Participationsuccesstext"
        android:layout_width="match_parent"
        android:textSize="@dimen/dimen_30"
        android:textColor="#999999"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="#d8d8d8"
        android:layout_height="1px"></View>
    <RelativeLayout
        android:id="@+id/rl_insert_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimen_25"
            android:layout_marginBottom="@dimen/dimen_25"
            android:textSize="@dimen/dimen_34"
            android:textColor="#ff9c06"
            android:text="@string/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>