<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f4">

    <RelativeLayout
        android:id="@+id/rl_help_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_128"
        android:background="@drawable/shape_header">

        <TextView
            android:id="@+id/tv_set_title"
            android:layout_width="@dimen/dimen_226"
            android:layout_height="@dimen/dimen_60"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_52"
            android:gravity="center"
            android:text="@string/Help"
            android:textColor="@color/text_white"
            android:textSize="@dimen/dimen_38" />

        <RelativeLayout
            android:id="@+id/rl_help_back"
            android:layout_width="@dimen/dimen_80"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_set_back"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_42"
                android:layout_marginBottom="@dimen/dimen_24"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_62"
                android:background="@drawable/go_back" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_help_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_help_header"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_marginTop="@dimen/dimen_38"
            android:text="@string/WhatCoins"
            android:textColor="#333333"
            android:textSize="@dimen/dimen_34" />

        <TextView
            android:id="@+id/tv_help_coin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_38"
            android:layout_marginLeft="@dimen/dimen_24"
            android:layout_marginRight="@dimen/dimen_24"
            android:layout_marginTop="@dimen/dimen_20"
            android:text="@string/CoinsExplanMYR"
            android:textColor="#999999"
            android:textSize="@dimen/dimen_28" />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginBottom="@dimen/dimen_80"
        android:id="@+id/rl_buycoins"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_70"
        android:layout_alignParentBottom="true"
        android:background="#f2f2f4">

        <TextView
            android:id="@+id/rl_bucoins_contant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/contactemail"
            android:textColor="#999999"
            android:textSize="@dimen/dimen_24" />

        <TextView
            android:id="@+id/rl_buycoins_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl_bucoins_contant"
            android:layout_marginTop="@dimen/dimen_5"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="#999999"
            android:textSize="@dimen/dimen_24" />
    </RelativeLayout>
</RelativeLayout>